--- a/text-reveal.html
+++ b/text-reveal.html
@@ -5,14 +5,14 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Baffle JS Text Reveal</title>
+      <title>about</title>
       <link rel="stylesheet" href="style.css">
 
       <!-- use cdn for the library / link the library file -->
       <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
 <body>
       <div class="container">
-            <div class="data">codegrid - Design tuts</div>
+            <div class="data">STYEL</div>
       </div>
       <script type="text/javascript">
 
