--- a/text-reveal.html
+++ b/text-reveal.html
@@ -22,7 +22,7 @@
             speed: 120
       });
       text.start();
-      text.reveal(4000);
+      text.reveal(500, 600);
 
       </script>
 </body>
