--- a/image_map.html
+++ b/image_map.html
@@ -39,6 +39,25 @@ $(function() {
 <img src='img/sample_img1.png' onmouseover="this.src='img/sample_img2.png';" onmouseout="this.src='img/sample_img1';" />
 </script>
 -->
+
+<style>
+
+area {
+    color: bisque;
+    background-color: none;
+    shape-image-threshold: inherit;
+    
+}
+
+area.area1 {
+    color:blueviolet;
+    margin:10px;
+    padding:5px;
+    font-size:120%;
+    
+}
+</style>
+
     </head>
 <body>
 
