--- a/image_map.html
+++ b/image_map.html
@@ -18,6 +18,7 @@ $(function() {
           area:hover {
               border: 1px;
               background-color:blueviolet;
+              color:cadetblue;
           }
         </style>
     </head>
