--- a/image_map.html
+++ b/image_map.html
@@ -13,7 +13,21 @@ $(function() {
     $('.map').maphilight();
 });
 </script>
+<!--
+<script language="javascript">
+    function changeImage() {
 
+        if (document.getElementById("imgClickAndChange").src == "http://www.userinterfaceicons.com/80x80/minimize.png") 
+        {
+            document.getElementById("imgClickAndChange").src = "http://www.userinterfaceicons.com/80x80/maximize.png";
+        }
+        else 
+        {
+            document.getElementById("imgClickAndChange").src = "http://www.userinterfaceicons.com/80x80/minimize.png";
+        }
+    }
+</script>
+-->
     
     </head>
 <body>
@@ -26,7 +40,12 @@ $(function() {
     <area target="_blank" alt="snkr" title="snkr" href="https://store.musinsa.com/app/product/detail/695334/0" coords="262,682,12" shape="circle">
         </map>
     </div>
-
+<!-- 
+    <p>
+        <img alt="ffff" src="img/sample_img1.png" 
+            style="height: 85px; width: 198px" id="imgClickAndChange" onclick="changeImage()"  />
+</p>
+-->
 <br>
 <br>
 <hr>
