mouseover on / out off

--- a/image_map.html
+++ b/image_map.html
@@ -28,10 +28,19 @@ $(function() {
     }
 </script>
 -->
-    
+<!--
+<script>
+<img src='img/sample_img1.png' onmouseover="this.src='img/sample_img2.png';" onmouseout="this.src='img/sample_img1';" />
+</script>
+-->
     </head>
 <body>
-            <div>
+
+    <!-- Try img change -->
+
+    <img src="img/sample_img1.png"; onmouseover="this.src='img/sample_img2.png';" onmouseout="this.src='img/sample_img1'";/>
+    <!--  
+    <div>
         <img src="img/sample_img1.png" usemap="#image-map" class="map">
         <map name="image-map">
             <area target="_blank" alt="cap" title="cap" href="https://store.musinsa.com/app/product/detail/410572/0" coords="237,76,13" shape="circle">
@@ -40,6 +49,10 @@ $(function() {
     <area target="_blank" alt="snkr" title="snkr" href="https://store.musinsa.com/app/product/detail/695334/0" coords="262,682,12" shape="circle">
         </map>
     </div>
+
+-->
+
+
 <!-- 
     <p>
         <img alt="ffff" src="img/sample_img1.png" 
