--- a/about.html
+++ b/about.html
@@ -48,6 +48,37 @@
 
             </script>
 
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div style="color:bisque;">
+
+                oweijfweoifjweoifjewofjfjf
+
+                    </div>
+
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <div>
+                        woijefweojfwoijf
+                        eiofeoi<br>
+                        boijrewoif
+                        <br>
+
+                    </div>
+
             
        
 
