--- a/image_map.html
+++ b/image_map.html
@@ -6,13 +6,15 @@
 https://hackernoon.com/how-to-use-jquery-and-html5-map-tag-to-highlight-image-areas-on-mouseover-b7c728947ed3
 
          -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/maphilight/1.4.0/jquery.maphilight.min.js"></script>
 <script>
 $(function() {
     $('.map').maphilight();
 });
 </script>
+-->
 <!--
 <script language="javascript">
     function changeImage() {
@@ -38,7 +40,7 @@ $(function() {
 
     <!-- Try img change -->
 
-    <img src="img/sample_img1.png"; onmouseover="this.src='img/sample_img2.png';" onmouseout="this.src='img/sample_img1'";/>
+    <img src="img/sample_img1.png"; onmouseover="this.src='img/sample_img2.png'";/>
     <!--  
     <div>
         <img src="img/sample_img1.png" usemap="#image-map" class="map">
