mouse in and out working

--- a/image_map.html
+++ b/image_map.html
@@ -40,7 +40,7 @@ $(function() {
 
     <!-- Try img change -->
 
-    <img src="img/sample_img1.png"; onmouseover="this.src='img/sample_img2.png'";/>
+    <img src="img/sample_img1.png"; onmouseover="this.src='img/sample_img2.png'"; onmouseout="this.src='img/sample_img1.png'";/>
     <!--  
     <div>
         <img src="img/sample_img1.png" usemap="#image-map" class="map">
