nice ! it worked but need to change img2

--- a/image_map.html
+++ b/image_map.html
@@ -40,7 +40,7 @@ $(function() {
 
     <!-- Try img change -->
 
-    <img src="img/sample_img1.png"; onmouseover="this.src='img/sample_img2.png'"; onmouseout="this.src='img/sample_img1.png'";/>
+    <img src="img/sample_img1.png"; onmouseover="this.src='img/sample_img2.png'"; onmouseout="this.src='img/sample_img1.png'"; usemap="#image-map" class="map">
     
     <map name="image-map">
         <area target="_blank" alt="cap" title="cap" href="https://store.musinsa.com/app/product/detail/410572/0" coords="237,76,13" shape="circle">
