compatability ajax w/ usemap

--- a/image_map.html
+++ b/image_map.html
@@ -6,7 +6,9 @@
 https://hackernoon.com/how-to-use-jquery-and-html5-map-tag-to-highlight-image-areas-on-mouseover-b7c728947ed3
 
          -->
-    <!--
+    
+    <!-- FOR NOW It's NOT working with ajax script with usemap code-->
+         <!--
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/maphilight/1.4.0/jquery.maphilight.min.js"></script>
 <script>
@@ -15,6 +17,8 @@ $(function() {
 });
 </script>
 -->
+
+
 <!--
 <script language="javascript">
     function changeImage() {
