--- a/image_map.html
+++ b/image_map.html
@@ -51,7 +51,7 @@ $(function() {
     <!-- Try img change -->
     
     <!-- !!!!!! CAUTION !!!!!!!! -->
-    <!-- Blinking Isue was caused by onmouseout event
+    <!-- Blinking Issue was caused by onmouseout event
          this event recognized "mouse OUT" on TAG , So the image was banished when mouse on the link spot 
         
          Should choose which one would go 
